ajustes do menu principal

--- a/prinipal.html
+++ b/prinipal.html
@@ -10,7 +10,6 @@
 <body>
     <div class="wrapper">
         <div class="menu">
-            <!-- Aqui vai o seu menu -->
             <ul>
                 <li><a href="#">Página Principal</a></li>
                 <li><a href="#">Sobre a clínica</a></li>
@@ -26,7 +25,7 @@
     
             <div class="content">
                 <h1>Clínica Bem Estar</h1>
-                <p>Fruto do sonho gerado no coração de sua idealizadora e do desejo do cuidar de forma diferenciada que em 12/2018 nascia a Clínica Bem Estar. Criada sob as diretrizes de cuidar com respeito, seriedade, comprometimento e sobre tudo de maneira humanizada que nos desenvolvemos e hoje somos referência em atendimento médico em nosso município.<br><br>
+                <p>Fruto do sonho gerado no <b>coração</b> de sua idealizadora e do desejo do cuidar de forma diferenciada que em <b>12/2018</b> nascia a Clínica Bem Estar. Criada sob as diretrizes de cuidar com respeito, seriedade, comprometimento e sobre tudo de maneira humanizada que nos desenvolvemos e hoje somos referência em atendimento médico em nosso município.<br><br>
 
                 Trabalhamos diuturnamente para oferecer a você e sua família um atendimento de qualidade, com valores acessíveis, carinho, dedicação e um ambiente agradável.<br><br>
                     
