--- a/prinipal.html
+++ b/prinipal.html
@@ -11,16 +11,16 @@
     <div class="wrapper">
         <div class="menu">
             <ul>
-                <li><a href="#">Página Principal</a></li>
-                <li><a href="#">Sobre a clínica</a></li>
-                <li><a href="#">Atendimento</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="/prinipal.html">Página Principal</a></li>
+                <li><a href="/about.html">Sobre a clínica</a></li>
+                <li><a href="/time.html">Atendimento</a></li>
+                <li><a href="/contact.html">Contato</a></li>
             </ul>
         </div>
 
         <div class="main">
             <div class="header">
-              <img src="/assets/imagem 1.webp" style="max-width: 100%; height: auto;" alt="">  
+              <img src="/assets/clinica-2.png" style="max-width: 100%; height: auto;" alt="">  
             </div>
     
             <div class="content">
@@ -34,6 +34,7 @@
     
             <div class="footer">
               <blockquote style="text-align: center;">Trabalhamos, diariamente, para cuidar de você e da sua família, com muito amor e dedicação.<br> Para nós, as pessoas são o grande diferencial da nossa clínica.</blockquote>
+
             </div>
         </div>
     </div>
